# stacked-prototype

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: scarlet.hpp
lua/: main.lua
lua/assets/: bites.lua  brews.lua  coffees.lua  terms.lua
lua/classes/: coffee.lua  game.lua  ghost.lua  item.lua  matrix.lua  menu.lua  pastry.lua  scone.lua  screen.lua  shelf.lua  snack.lua  soda.lua  sticker.lua  stickerpack.lua  test.lua  tetromino.lua
lua/screens/: cafe.lua  gameplay.lua  splash.lua  title.lua
src/: CMakeLists.txt  gizmos.hpp  main.cpp
src/gizmos/: gizmo.hpp  label.hpp  quad.hpp  sound.hpp  sprite.hpp
